# Forge_AI

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEBASE_GUIDE.md  CODE_ADVENTURE_TOUR.md  CODE_ADVENTURE_TOUR.txt  CODE_CONNECTION_MAP.md  CODE_CONNECTION_MAP.txt  CONTRIBUTING.md  CORE_FEATURES_GUIDE.md  CREDITS.md  ENHANCEMENTS_SUMMARY.md  FEATURES_IMPLEMENTATION_SUMMARY.md  FEDERATED_LEARNING.md  FEDERATED_LEARNING_SUMMARY.md  ForgeAI.bat  ForgeAI.sh  GETTING_STARTED.md  GUI_ARCHITECTURE.md  GUI_MODE_SYSTEM.md  GUI_REDESIGN_SUMMARY.md  HOW_TO_MAKE_AI.txt  IMPLEMENTATION_MAP.md  IMPLEMENTATION_SPECIALIZED_ROUTING.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INTEGRATION_CHECK.md  INTEGRATION_STATUS.md  LICENSE  MANIFEST.in  MERGE_SUMMARY.md  MODULE_IMPROVEMENTS_SUMMARY.md  ORCHESTRATION_IMPLEMENTATION.md  PROGRAM_REPORT.md  PROJECT_OVERVIEW.txt  PROJECT_STATUS.md  QUICK_FILE_LOCATOR.md  QUICK_FILE_LOCATOR.txt  QUICK_START.md  README.md  (+48 more)
.github/: copilot-instructions.md  dependabot.yml
data/: README.md  combined_action_training.txt  personality_development.txt  self_awareness_training.txt  starter_training.txt  tool_training_data.txt  tool_training_examples.txt  training_data.txt
docs/: AI_WANTS_AND_LEARNED_GENERATION.md  API_KEY_GUIDE.md  AVATAR_CREATION_GUIDE.md  BUILTIN_FALLBACKS.md  CODE_TOUR.md  ENHANCED_VOICE_SYSTEM.md  FIVE_STAR_FEATURES.md  GUI_GUIDE.md  HELP.txt  HOW_TO_TRAIN.md  HOW_TO_TRAIN_TOOL_AI.txt  HOW_TO_TRAIN_TOOL_ROUTER.txt  HUGGINGFACE.md  HUGGINGFACE_INTEGRATION.md  LOCAL_VS_CLOUD.md  MODULE_GUIDE.md  MODULE_QUICKREF.md  MULTI_INSTANCE.md  ORCHESTRATION_GUIDE.md  OVERLAY_GUIDE.md  OVERLAY_README.md  PERSONALITY.md  PERSONA_UI_LAYOUT.md  PER_MODEL_HISTORY.md  PI_AND_AI_COLLABORATION_PR.md  SECURITY.md  SPECIALIZED_MODELS.md  TOOL_TRAINING_QUICKSTART.txt  TOOL_USE.md  TRAINING_DATA_FORMAT.md  TRAINING_QUIRKS.md  TUNNEL_IMPLEMENTATION_SUMMARY.md  VOICE_CUSTOMIZATION.md  WEB_MOBILE.md  WHAT_NOT_TO_DO.txt  architecture.md  avatar_roadmap.md  multi_device_guide.md  overlay_visualization.py
enigma/: __init__.py  config.py  utils.py
(+1452 files in other folders)
